// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error Panel Tests Render Test 1`] = `
<ErrorPanel>
  <Dialog
    actions={
      Object {
        "end": Array [
          <Button
            caption="Close"
            onClick={[Function]}
          />,
        ],
      }
    }
    caption={
      <y>
        <Icon
          disabled={false}
          src={123}
        />
        <Label>
          
        </Label>
      </y>
    }
    className="msg errorPanel"
    container={Object {}}
    content={
      <Container
        orientation="column"
      >
        
      </Container>
    }
  >
    <Portal
      container={Object {}}
      onClose={[Function]}
      onOpen={[Function]}
    />
  </Dialog>
</ErrorPanel>
`;

exports[`Error Panel Tests Show Panel 1`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible errorPanel"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-error"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        Error
      </label>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar"
        style="flex-direction: column;"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data-tooltip="expand"
          id="errorMessage"
          style="white-space: pre-line;"
        >
          One line
        </label>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent unselectable"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Close"
          class="msg button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Error Panel Tests Show Panel 2`] = `
<div
  __self="[object Object]"
  __source="[object Object]"
  class="msg portal"
>
  <div
    __self="[object Object]"
    __source="[object Object]"
    class="msg dialog visible errorPanel"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="title verticalCenterContent"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg icon codicon codicon-error"
      />
      <label
        __self="[object Object]"
        __source="[object Object]"
        class="msg label"
        data-tooltip="expand"
      >
        Caption
      </label>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="content fixedScrollbar"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar"
        style="flex-direction: column;"
      >
        <label
          __self="[object Object]"
          __source="[object Object]"
          class="msg label"
          data-tooltip="expand"
          id="errorMessage"
          style="white-space: pre-line;"
        >
          Line 1
Line 2
        </label>
      </div>
    </div>
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="footer verticalCenterContent unselectable"
    >
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar leftItems"
        style="flex-direction: row;"
      />
      <div
        __self="[object Object]"
        __source="[object Object]"
        class="msg container fixedScrollbar rightItems"
        style="flex-direction: row-reverse;"
      >
        <button
          __self="[object Object]"
          __source="[object Object]"
          caption="Close"
          class="msg button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
